--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,31 +6,34 @@
 
 
     <servlet>
-        <servlet-name>MainServlet</servlet-name>
-        <servlet-class>org.tsystems.mobile_company.servlets.ServletMain</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/MainServlet</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet>
         <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>org.tsystems.mobile_company.servlets.ServletLogin</servlet-class>
+        <servlet-class>org.tsystems.mobile_company.servlets.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
-    <filter>
-        <filter-name>LoginValidationFilter</filter-name>
-        <filter-class>org.tsystems.mobile_company.filters.FilterLoginValidation</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>LoginValidationFilter</filter-name>
-        <servlet-name>LoginServlet</servlet-name>
-    </filter-mapping>
+
+    <servlet>
+        <servlet-name>AdminServlet</servlet-name>
+        <servlet-class>org.tsystems.mobile_company.servlets.AdminServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminServlet</servlet-name>
+        <url-pattern>/AdminServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>org.tsystems.mobile_company.servlets.UserServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
+        <url-pattern>/UserServlet</url-pattern>
+    </servlet-mapping>
 
 
+    <welcome-file-list>
+        <welcome-file>login.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
